--- a/contacte.html
+++ b/contacte.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV contacte Chitan Vlad</title>
+    <title>CV contacte Cislari Bogdan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="header">
         <nav>
-            <a class="nav-link" href="../index.html#Despre"> Despre </a>
-            <a class="nav-link" href="../index.html#Experienta"> Experienta</a>
-            <a class="nav-link" href="../index.html#Educatie"> Educatie</a>
-            <a class="nav-link" href="pages/contacte.html"> Contacte</a>
+            <a class="nav-link" href="index.html#Despre"> Despre </a>
+            <a class="nav-link" href="index.html#Experienta"> Experienta</a>
+            <a class="nav-link" href="index.html#Educatie"> Educatie</a>
+            <a class="nav-link" href="contacte.html"> Contacte</a>
 
         </nav>
 
@@ -59,7 +59,7 @@
     </div>
 
     <footer>
-        Procopii Tatiana
+        Cisalri Bogdan
     </footer>
     <script>
         (function (d, s, id) {
