--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div>
     <div class="header">
         <nav>
             <a class="nav-link" href="#Despre"> Despre </a>
@@ -200,6 +201,7 @@
 
         <!-- navigarea pe pagina reamintire -->
     </div>
+</div>
 
     <footer>
         Cislari Bogdan
